@@ -53,6 +53,9 @@
    - markus@cvs.openbsd.org 2002/03/18 17:23:31
      [key.c key.h]
      add key_demote() for ssh-privsep
+   - provos@cvs.openbsd.org 2002/03/18 17:25:29
+     [bufaux.c bufaux.h]
+     buffer_skip_string and extra sanity checking; needed by ssh-privsep
 
 20020317
  - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
@@ -7899,4 +7902,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1940 2002/03/22 01:45:53 mouring Exp $
+$Id: ChangeLog,v 1.1941 2002/03/22 01:47:52 mouring Exp $
